# t4-multiplayer

./: .gitignore  Makefile  README.md  pyproject.toml
src/fe-game/: package-lock.json  package.json
src/fe-game/src/: App.tsx  GameMenu.tsx
src/fe-game/src/game/: Board.tsx  Game.tsx
src/server/: main.py
src/server/api/: game.py
src/server/models/: game_store.py  t4_game.py
src/t4_game/: main.py
src/t4_game/api/: game.py
src/t4_game/models/: game_store.py  multi_player_connection_manager.py  t4_game.py
src/web/: package-lock.json  package.json
src/web/src/: App.css  App.tsx  GameMenu.tsx  main.tsx
src/web/src/game/: Banner.tsx  Game.tsx  GameBox.tsx  GameMenu.tsx  game.types.tsx
