[project]
name = "t4_game"
version = "0.1.0"
description = ""
authors = [
    {name = "Shantanu Kumar",email = "kumarshantanu168@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)"
]

[tool.poetry]
packages = [{include = "t4_game", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
